Fix scrollbar display (#85)

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,6 @@
 
 @layer base {
 	html {
-		scrollbar-gutter: stable both-edges;
 		tab-size: 2;
 	}
 
